adicionando os elementos semanticos

--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
         <p>Sistema de gerencionamento de vinhos desenvolvidos para o cp3 - js </p>
     </header>
 
+    <main>
+        <p>Abra o console do navegador para ver os resultados do sistema.</p>
+        <p>As interações também serão exibidas com <code>alert()</code>.</p>
+    </main>
+
+    <footer>
+    <small>Desenvolvido para fins acadêmicos.</small>
+    </footer>
+
 
 
 
