--- a/index.html
+++ b/index.html
@@ -20,10 +20,6 @@
     <small>Desenvolvido para fins acadêmicos.</small>
     </footer>
 
-
-
-
-    
-    
+    <script src="script.js"></script>
 </body>
 </html>
