--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vinharia Agnello</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="src/css/style.css" />
 </head>
 <body>
     <header>
@@ -21,6 +21,6 @@
     <small>Desenvolvido para fins acadêmicos.</small>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="src/js/script.js"></script>
 </body>
 </html>
